<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_item"
        android:title="@string/sub_header">
        <menu>
            <item
                android:id="@+id/inbox_item"
                android:icon="@drawable/ic_home"
                android:title="@string/home"
                android:checkable="true"/>
            <item
                android:id="@+id/outbox_item"
                android:icon="@drawable/ic_cart"
                android:title="@string/cart"
                android:checkable="true"/>
            <item
                android:id="@+id/favourites_item"
                android:icon="@drawable/ic_favourite"
                android:title="@string/favourite"
                android:checkable="true"/>
        </menu>
    </item>
</menu>