<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SplashActivity"
    android:background="@drawable/elanding"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/splash_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/s_48sp"
        android:includeFontPadding="false"
        android:lineSpacingMultiplier="0.8"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/tv_sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/m_40dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/splash_sub_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/s_18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_50dp"
        android:layout_marginHorizontal="@dimen/m_20dp"
        android:layout_marginBottom="@dimen/m_20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/start"
        android:background="@drawable/btn_shape"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/s_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>