<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/m_20dp"
    tools:context=".view.DetailActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/m_50dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddToCart">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scaleY="-1"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnHeart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_heart_fill"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="@dimen/m_200dp"
                android:layout_marginTop="@dimen/m_12dp"
                android:id="@+id/rvCarousel"
                app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/btnHeart"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/tvLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/men_s_shoes"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@+id/rvCarousel"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/m_10dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_fill"
                app:layout_constraintTop_toBottomOf="@+id/rvCarousel"
                app:layout_constraintEnd_toStartOf="@+id/tvRating"
                android:layout_marginTop="@dimen/m_6dp"
                />
            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7_5"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@+id/rvCarousel"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/m_10dp"
                />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nike_air_max_270"
                android:textStyle="bold"
                android:textSize="@dimen/s_18sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@+id/tvRating"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/m_16dp"
                />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_290_00"
                android:textStyle="bold"
                android:textSize="@dimen/s_18sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@+id/tvRating"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/m_16dp"
                />

            <TextView
                android:id="@+id/sizeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintTop_toBottomOf="@+id/tvPrice"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/m_10dp"
                />

            <TextView
                android:id="@+id/tvUsSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/us"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintTop_toBottomOf="@+id/tvPrice"
                app:layout_constraintEnd_toStartOf="@+id/tvUkSize"
                android:layout_marginTop="@dimen/m_10dp"
                android:layout_marginEnd="@dimen/m_16dp"
                />
            <TextView
                android:id="@+id/tvUkSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uk"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintTop_toBottomOf="@+id/tvPrice"
                app:layout_constraintEnd_toStartOf="@+id/tvEuSize"
                android:layout_marginTop="@dimen/m_10dp"
                android:layout_marginEnd="@dimen/m_16dp"
                />
            <TextView
                android:id="@+id/tvEuSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eu"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintTop_toBottomOf="@+id/tvPrice"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/m_10dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSize"
                android:layout_width="match_parent"
                android:layout_height="@dimen/m_80dp"
                android:layout_marginTop="@dimen/m_10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUkSize" />

            <androidx.cardview.widget.CardView
                android:id="@+id/desCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/m_50dp"
                app:cardCornerRadius="@dimen/m_8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvSize"
                android:layout_marginTop="@dimen/m_12dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/m_6dp"
                    >
                    <TextView
                        android:id="@+id/tvlabelDes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textStyle="normal"
                        android:textSize="@dimen/s_18sp"
                        android:fontFamily="@font/poppins_medium"
                        />
                    <ImageView
                        android:id="@+id/ivDesExpand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_expand_down"
                        android:layout_alignParentEnd="true"
                        />
                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s"
                        android:textStyle="normal"
                        android:layout_centerVertical="true"
                        android:visibility="gone"
                        android:layout_below="@+id/tvlabelDes"
                        android:fontFamily="@font/poppins_medium"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/deliCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/m_50dp"
                app:cardCornerRadius="@dimen/m_8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desCard"
                android:layout_marginTop="@dimen/m_12dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/m_6dp"
                    >
                    <TextView
                        android:id="@+id/tvlabeldeli"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/free_delivery_and_returns"
                        android:textStyle="normal"
                        android:textSize="@dimen/s_18sp"
                        android:fontFamily="@font/poppins_medium"
                        />
                    <ImageView
                        android:id="@+id/ivDeliExpand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_expand_down"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/expand"
                        />
                    <TextView
                        android:id="@+id/tvdeli"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s"
                        android:textStyle="normal"
                        android:visibility="gone"
                        android:layout_below="@+id/tvlabeldeli"
                        android:fontFamily="@font/poppins_medium"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvColor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80dp"
                android:layout_marginTop="@dimen/m_10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deliCard" />

            <TextView
                android:id="@+id/tvPopubarLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quantity"
                android:textSize="@dimen/_16sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginTop="@dimen/m_10dp"
                app:layout_constraintTop_toBottomOf="@+id/rvColor"
                app:layout_constraintStart_toStartOf="parent"
                />
            <ImageView
                android:id="@+id/ivRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_minus"
                android:background="@drawable/circle_shape"
                android:layout_marginEnd="@dimen/m_10dp"
                app:layout_constraintTop_toBottomOf="@+id/rvColor"
                app:layout_constraintEnd_toStartOf="@+id/tvQuantity"
                />
            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="@dimen/s_18sp"
                android:layout_marginEnd="@dimen/m_10dp"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintTop_toBottomOf="@+id/rvColor"
                app:layout_constraintEnd_toStartOf="@+id/ivAdd"
                />
            <ImageView
                android:id="@+id/ivAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add"
                android:background="@drawable/circle_shape"
                app:layout_constraintTop_toBottomOf="@+id/rvColor"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddToCart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_50dp"
        android:layout_marginHorizontal="@dimen/m_20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/add_to_cart"
        android:background="@drawable/btn_shape"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/s_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>