<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/m_20dp"
    android:background="@color/white"
    tools:context=".view.HomeFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnDrawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scaleY="-1"
                android:src="@drawable/ic_drawer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_cart_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                android:hint="@string/search"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/btnDrawer"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:id="@+id/tvPopubarLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_brands"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="@dimen/m_10dp"
                app:layout_constraintTop_toBottomOf="@+id/search_bar"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:id="@+id/tvBrandSellAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell_all"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/m_10dp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@+id/search_bar"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_brand"
                android:layout_width="match_parent"
                android:layout_height="@dimen/m_80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPopubarLabel" />
            <TextView
                android:id="@+id/tvMenLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/men_s_shoes"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@+id/rv_brand"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/m_10dp"
                />
            <TextView
                android:id="@+id/tvMenShoeSellAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell_all"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@+id/rv_brand"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/m_10dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_men_shoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/shoe_item_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMenLabel" />
            <TextView
                android:id="@+id/tvWomenLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/men_s_shoes"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@+id/rv_men_shoes"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/m_10dp"
                />
            <TextView
                android:id="@+id/tvWowMenShoeSellAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell_all"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@+id/rv_men_shoes"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/m_10dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_women_shoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/shoe_item_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWowMenShoeSellAll" />
            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                shimmer:duration="800">

                <!-- Adding 7 rows of placeholders -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <include layout="@layout/data_placeholder_layout" />
                    <include layout="@layout/data_placeholder_layout" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>